--- a/Image_Style_Transfer.ipynb
+++ b/Image_Style_Transfer.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TODO : introduction / paper address / reference / read.md / images2gif"
+    "# TODO : introduction / paper address / reference / read.md / images2gif\n",
+    "\n"
    ]
   },
   {
@@ -13,7 +14,7 @@
    "source": [
     "# Import Libraries\n",
     "\n",
-    "tensorflow must be imported after scipy"
+    "Tensorflow must be imported after scipy"
    ]
   },
   {
@@ -101,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 94,
    "metadata": {
     "collapsed": false
    },
@@ -113,9 +114,9 @@
     "BETA = 1000\n",
     "\n",
     "STYLE_LAYERS = [\n",
-    "    ('conv1_1', 0.2),\n",
+    "    ('conv1_1', 0.1),\n",
     "    ('conv2_1', 0.2),\n",
-    "    ('conv3_1', 0.2),\n",
+    "    ('conv3_1', 0.3),\n",
     "    ('conv4_1', 0.2),\n",
     "    ('conv5_1', 0.2),\n",
     "]\n",
@@ -336,6 +337,10 @@
    "metadata": {},
    "source": [
     "# Run\n",
+    "\n",
+    "\n",
+    "\n",
+    "<img src=\"./images/algorithm.png\">\n",
     "\n",
     "Optimization with ADAM (refer : https://arxiv.org/pdf/1412.6980.pdf) "
    ]
