--- a/Image_Style_Transfer.ipynb
+++ b/Image_Style_Transfer.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TODO : introduction / paper address / reference / read.md / images2gif\n",
+    "# TODO : introduction / paper address / reference / read.md\n",
     "\n"
    ]
   },
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -448,9 +448,6 @@
     "from PIL import Image, ImageDraw\n",
     "import os\n",
     "import sys\n",
-    "import random\n",
-    "import argparse\n",
-    "import webbrowser\n",
     "from glob import glob\n",
     "\n",
     "filename = \"out\"\n",
