--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -100,10 +100,6 @@
     "        return W, b\n",
     "\n",
     "    def _relu(conv2d_layer):\n",
-    "        \"\"\"\n",
-    "        Return the RELU function wrapped over a TensorFlow layer. Expects a\n",
-    "        Conv2d layer input.\n",
-    "        \"\"\"\n",
     "        return tf.nn.relu(conv2d_layer)\n",
     "\n",
     "    def _conv2d(prev_layer, layer, layer_name):\n",
@@ -183,6 +179,11 @@
     "        # out some constants (from what I see in other source code), so I'll\n",
     "        # replicate the same normalization constant as used in style loss.\n",
     "        return (1 / (4 * N * M)) * tf.reduce_sum(tf.pow(x - p, 2))\n",
+    "    \n",
+    "    E = [_content_loss(sess.run(model[layer_name]), model[layer_name]) for layer_name, _ in CONTENT_LAYERS]\n",
+    "    W = [w for _, w in _LAYERS]\n",
+    "    loss = sum([W[l] * E[l] for l in range(len(STYLE_LAYERS))])\n",
+    "    \n",
     "    return _content_loss(sess.run(model['conv4_2']), model['conv4_2'])"
    ]
   },
