--- a/Image_Style_Transfer.ipynb
+++ b/Image_Style_Transfer.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -56,12 +56,14 @@
     "\n",
     "<b>[3]</b> Model - ImageNet VGG-19 <br>\n",
     "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(http://www.vlfeat.org/matconvnet/models/imagenet-vgg-verydeep-19.mat)<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Normalized model<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(http://bethgelab.org/deepneuralart/)<br>\n",
     "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MEAN_VALUES is value of each RGB"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -102,23 +104,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "NOISE_RATIO = 0.6\n",
+    "NOISE_RATIO = 1.0\n",
     "\n",
     "ALPHA = 1\n",
     "BETA = 1000\n",
     "\n",
     "STYLE_LAYERS = [\n",
-    "    ('conv1_1', 0.1),\n",
-    "    ('conv2_1', 0.2),\n",
-    "    ('conv3_1', 0.3),\n",
-    "    ('conv4_1', 0.2),\n",
-    "    ('conv5_1', 0.2),\n",
+    "    ('conv1_1', 0.3),\n",
+    "    ('conv2_1', 0.25),\n",
+    "    ('conv3_1', 0.2),\n",
+    "    ('conv4_1', 0.15),\n",
+    "    ('conv5_1', 0.1),\n",
     "]\n",
     "\n",
     "CONTENT_LAYERS = [\n",
@@ -180,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -228,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -258,7 +260,8 @@
    "source": [
     "# VGG Model\n",
     "\n",
-    "<b>Notice</b> : paper use average pooling instead of max pooling\n",
+    "<b>Notice</b> : paper use average pooling instead of max pooling<br>\n",
+    "<b>Notice</b> : paper use normalized VGG-19 by scaling the weights such that the mean activation of each convolutional filter over images and positions is equal to one. This helps with the image generation and apologise that this was not made clear in the preprint version of the manuscripts.\n",
     "\n",
     "Load VGG-19 Model and parse it.<br>\n",
     "W : weight vector<br>\n",
@@ -267,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -347,82 +350,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "sess = tf.InteractiveSession()\n",
+    "def run():\n",
+    "    sess = tf.InteractiveSession()\n",
     "\n",
-    "content_image = load_image(CONTENT_IMAGE)\n",
-    "style_image = load_image(STYLE_IMAGE)\n",
-    "input_image = generate_noise_image(content_image)\n",
+    "    content_image = load_image(CONTENT_IMAGE)\n",
+    "    style_image = load_image(STYLE_IMAGE)\n",
+    "    input_image = generate_noise_image(content_image)\n",
     "\n",
-    "model = load_vgg_model(VGG_MODEL)\n",
-    "\n",
-    "\n",
-    "sess.run(tf.global_variables_initializer())\n",
-    "\n",
-    "sess.run(model['input'].assign(content_image))\n",
-    "content_loss = content_loss_func(sess, model)\n",
-    "\n",
-    "sess.run(model['input'].assign(style_image))\n",
-    "style_loss = style_loss_func(sess, model)\n",
-    "\n",
-    "total_loss = ALPHA * content_loss + BETA * style_loss\n",
+    "    model = load_vgg_model(VGG_MODEL)\n",
     "\n",
     "\n",
-    "sess.run(model['input'].assign(input_image))\n",
+    "    sess.run(tf.global_variables_initializer())\n",
     "\n",
-    "optimizer = tf.train.AdamOptimizer(2.0)\n",
-    "train_step = optimizer.minimize(total_loss)\n",
+    "    sess.run(model['input'].assign(content_image))\n",
+    "    content_loss = content_loss_func(sess, model)\n",
     "\n",
-    "sess.run(tf.global_variables_initializer())\n",
-    "sess.run(model['input'].assign(input_image))\n",
+    "    sess.run(model['input'].assign(style_image))\n",
+    "    style_loss = style_loss_func(sess, model)\n",
     "\n",
-    "now = datetime.now()\n",
-    "case = \"result/{:.3f}\".format(ALPHA/BETA)+\"_\"+str(ITERATIONS)+\"_\"+now.strftime(\"%Y%m%d_%H%M%S\")\n",
+    "    total_loss = ALPHA * content_loss + BETA * style_loss\n",
     "\n",
-    "if not os.path.exists(\"result\"):\n",
-    "    os.mkdir(\"result\")\n",
     "\n",
-    "if not os.path.exists(case):\n",
-    "    os.mkdir(case)\n",
-    "    \n",
-    "if not os.path.exists(case+\"/output\"):\n",
-    "    os.mkdir(case+\"/output\")\n",
+    "    sess.run(model['input'].assign(input_image))\n",
     "\n",
-    "save_image(case+\"/1.content\"+CONTENT_IMAGE[CONTENT_IMAGE.rfind('.'):], content_image)\n",
-    "save_image(case+\"/2.style\"+STYLE_IMAGE[STYLE_IMAGE.rfind('.'):], style_image)\n",
+    "    optimizer = tf.train.AdamOptimizer(2.0)\n",
+    "    train_step = optimizer.minimize(total_loss)\n",
     "\n",
-    "file = open(case+\"/Log.txt\", \"a\")\n",
-    "log(file)\n",
+    "    sess.run(tf.global_variables_initializer())\n",
+    "    sess.run(model['input'].assign(input_image))\n",
     "\n",
-    "for it in range(ITERATIONS+1):\n",
-    "    sess.run(train_step)\n",
-    "    save_it = 1\n",
-    "    \n",
-    "    if it<10 :\n",
+    "    now = datetime.now()\n",
+    "    case = \"result/{:.3f}\".format(ALPHA/BETA)+\"_\"+str(ITERATIONS)+\"_\"+now.strftime(\"%Y%m%d_%H%M%S\")\n",
+    "\n",
+    "    if not os.path.exists(\"result\"):\n",
+    "        os.mkdir(\"result\")\n",
+    "\n",
+    "    if not os.path.exists(case):\n",
+    "        os.mkdir(case)\n",
+    "\n",
+    "    if not os.path.exists(case+\"/output\"):\n",
+    "        os.mkdir(case+\"/output\")\n",
+    "\n",
+    "    save_image(case+\"/1.content\"+CONTENT_IMAGE[CONTENT_IMAGE.rfind('.'):], content_image)\n",
+    "    save_image(case+\"/2.style\"+STYLE_IMAGE[STYLE_IMAGE.rfind('.'):], style_image)\n",
+    "\n",
+    "    file = open(case+\"/Log.txt\", \"a\")\n",
+    "    log(file)\n",
+    "\n",
+    "    for it in range(ITERATIONS+1):\n",
+    "        sess.run(train_step)\n",
     "        save_it = 1\n",
-    "    elif it<100 :\n",
-    "        save_it = 5\n",
-    "    elif it<1000 :\n",
-    "        save_it = 10\n",
-    "    else :\n",
-    "        save_it = 100\n",
     "\n",
-    "    if it%save_it == 0:\n",
-    "        mixed_image = sess.run(model['input'])\n",
-    "        file.write('Iteration %d\\n' % (it))\n",
-    "        file.write('sum : ' + str(sess.run(tf.reduce_sum(mixed_image))) + \"\\n\")\n",
-    "        file.write('cost: ' + str(sess.run(total_loss)) + \"\\n\\n\")\n",
+    "        if it<10 :\n",
+    "            save_it = 1\n",
+    "        elif it<100 :\n",
+    "            save_it = 5\n",
+    "        elif it<1000 :\n",
+    "            save_it = 10\n",
+    "        else :\n",
+    "            save_it = 100\n",
     "\n",
-    "        filename = case+'/output/%04d.png' % (it)\n",
-    "        save_image(filename, mixed_image)\n",
+    "        if it%save_it == 0:\n",
+    "            mixed_image = sess.run(model['input'])\n",
+    "            file.write('Iteration %d\\n' % (it))\n",
+    "            file.write('sum : ' + str(sess.run(tf.reduce_sum(mixed_image))) + \"\\n\")\n",
+    "            file.write('cost: ' + str(sess.run(total_loss)) + \"\\n\\n\")\n",
     "\n",
-    "save_image(case+\"/3.result.png\", mixed_image)\n",
-    "file.close()"
+    "            filename = case+'/output/%04d.png' % (it)\n",
+    "            save_image(filename, mixed_image)\n",
+    "\n",
+    "    save_image(case+\"/3.result.png\", mixed_image)\n",
+    "    file.close()\n",
+    "    sess.close()"
    ]
   },
   {
@@ -438,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -470,8 +475,18 @@
     "\n",
     "def start():\n",
     "    print(\"Creating animated gif....\")\n",
-    "    makeAnimatedGif()\n",
-    "\n",
+    "    makeAnimatedGif()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "run()\n",
     "start()"
    ]
   }
