--- a/Image_Style_Transfer.ipynb
+++ b/Image_Style_Transfer.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -104,13 +104,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "NOISE_RATIO = 1.0\n",
+    "NOISE_RATIO = 0.6\n",
     "\n",
     "ALPHA = 1\n",
     "BETA = 1000\n",
@@ -129,7 +129,7 @@
     "\n",
     "ITERATIONS = 5000\n",
     "\n",
-    "def log(file):\n",
+    "def log(file, now):\n",
     "    file.write('Recorded at: %s\\n\\n' %now.strftime(\"%Y-%m-%d_%H:%M:%S\"))\n",
     "    file.write(\"-----------------------------------------------\\n\\n\")\n",
     "    file.write('Noise Ratio : %.1f\\n\\n' %NOISE_RATIO)\n",
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -427,7 +427,8 @@
     "\n",
     "    save_image(case+\"/3.result.png\", mixed_image)\n",
     "    file.close()\n",
-    "    sess.close()"
+    "    sess.close()\n",
+    "    return case"
    ]
   },
   {
@@ -443,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -458,7 +459,7 @@
     "filename = \"out\"\n",
     "\n",
     "\n",
-    "def makeAnimatedGif():\n",
+    "def makeAnimatedGif(case):\n",
     "\n",
     "    \"\"\"\n",
     "    image files must be sorted\n",
@@ -473,9 +474,9 @@
     "    writeGif(filename, images, duration=0.2)\n",
     "    print(\"%s has been created at %s.\" % (filename, os.path.realpath(filename)))\n",
     "\n",
-    "def start():\n",
+    "def start(case):\n",
     "    print(\"Creating animated gif....\")\n",
-    "    makeAnimatedGif()\n"
+    "    makeAnimatedGif(case)\n"
    ]
   },
   {
@@ -486,8 +487,7 @@
    },
    "outputs": [],
    "source": [
-    "run()\n",
-    "start()"
+    "start(run())"
    ]
   }
  ],
