--- a/Image_Style_Transfer.ipynb
+++ b/Image_Style_Transfer.ipynb
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -401,7 +401,7 @@
     "    save_image(case+\"/2.style\"+STYLE_IMAGE[STYLE_IMAGE.rfind('.'):], style_image)\n",
     "\n",
     "    file = open(case+\"/Log.txt\", \"a\")\n",
-    "    log(file)\n",
+    "    log(file, now)\n",
     "\n",
     "    for it in range(ITERATIONS+1):\n",
     "        sess.run(train_step)\n",
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -483,7 +483,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
