--- a/Image_Style_Transfer.ipynb
+++ b/Image_Style_Transfer.ipynb
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -455,9 +455,6 @@
     "import os\n",
     "import sys\n",
     "from glob import glob\n",
-    "\n",
-    "filename = \"out\"\n",
-    "\n",
     "\n",
     "def makeAnimatedGif(case):\n",
     "\n",
@@ -470,7 +467,7 @@
     "    images = [Image.open(fn) for fn in imgFiles]\n",
     "    \n",
     "    global filename\n",
-    "    filename = case + \"/4.\" + filename + \".gif\"\n",
+    "    filename = case + \"/4.out.gif\"\n",
     "    writeGif(filename, images, duration=0.2)\n",
     "    print(\"%s has been created at %s.\" % (filename, os.path.realpath(filename)))\n",
     "\n",
@@ -481,14 +478,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating animated gif....\n",
+      "result/0.001_5000_20170218_044855/4.out.gif has been created at C:\\Users\\79981\\tensorflow\\result\\0.001_5000_20170218_044855\\4.out.gif.\n"
+     ]
+    }
+   ],
+   "source": [
+    "start(\"result/0.001_5000_20170218_044855\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "start(run())"
+    "STYLE_LAYERS = [\n",
+    "    ('conv1_1', 0.2),\n",
+    "    ('conv2_1', 0.2),\n",
+    "    ('conv3_1', 0.2),\n",
+    "    ('conv4_1', 0.2),\n",
+    "    ('conv5_1', 0.2),\n",
+    "]\n",
+    "\n",
+    "\n",
+    "start(run())\n",
+    "\n",
+    "\n",
+    "ALPHA = 1\n",
+    "BETA = 10000\n",
+    "\n",
+    "\n",
+    "start(run())\n",
+    "\n",
+    "\n",
+    "ALPHA = 1\n",
+    "BETA = 100\n",
+    "\n",
+    "\n",
+    "start(run())\n",
+    "\n",
+    "\n",
+    "ALPHA = 1\n",
+    "BETA = 1000\n",
+    "\n",
+    "STYLE_LAYERS = [\n",
+    "    ('conv1_1', 0.25),\n",
+    "    ('conv2_1', 0.25),\n",
+    "    ('conv3_1', 0.25),\n",
+    "    ('conv4_1', 0.25)\n",
+    "]\n",
+    "\n",
+    "\n",
+    "start(run())\n",
+    "\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
