--- a/Image_Style_Transfer.ipynb
+++ b/Image_Style_Transfer.ipynb
@@ -84,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hyper Parameter\n",
+    "# Hyperparameter\n",
     "\n",
     "<b>[1]</b> NOISE_RATIO ($\\gamma$) : Constant for initialize <b>white noise image</b> using <b>content image</b>\n",
     "\n",
@@ -110,17 +110,17 @@
    },
    "outputs": [],
    "source": [
-    "NOISE_RATIO = 0.6\n",
+    "NOISE_RATIO = 1.0\n",
     "\n",
     "ALPHA = 1\n",
     "BETA = 1000\n",
     "\n",
     "STYLE_LAYERS = [\n",
-    "    ('conv1_1', 0.3),\n",
-    "    ('conv2_1', 0.25),\n",
+    "    ('conv1_1', 0.2),\n",
+    "    ('conv2_1', 0.2),\n",
     "    ('conv3_1', 0.2),\n",
-    "    ('conv4_1', 0.15),\n",
-    "    ('conv5_1', 0.1),\n",
+    "    ('conv4_1', 0.2),\n",
+    "    ('conv5_1', 0.2)\n",
     "]\n",
     "\n",
     "CONTENT_LAYERS = [\n",
@@ -260,8 +260,8 @@
    "source": [
     "# VGG Model\n",
     "\n",
-    "<b>Notice</b> : paper use average pooling instead of max pooling<br>\n",
-    "<b>Notice</b> : paper use normalized VGG-19 by scaling the weights such that the mean activation of each convolutional filter over images and positions is equal to one. This helps with the image generation and apologise that this was not made clear in the preprint version of the manuscripts.\n",
+    "<b>Notice</b> : paper used average pooling instead of max pooling<br>\n",
+    "<b>Notice</b> : paper used normalized VGG-19 by scaling the weights such that the mean activation of each convolutional filter over images and positions is equal to one. This helps with the image generation and apologise that this was not made clear in the preprint version of the manuscripts.\n",
     "\n",
     "Load VGG-19 Model and parse it.<br>\n",
     "W : weight vector<br>\n",
@@ -478,82 +478,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating animated gif....\n",
-      "result/0.001_5000_20170218_044855/4.out.gif has been created at C:\\Users\\79981\\tensorflow\\result\\0.001_5000_20170218_044855\\4.out.gif.\n"
-     ]
-    }
-   ],
-   "source": [
-    "start(\"result/0.001_5000_20170218_044855\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "STYLE_LAYERS = [\n",
-    "    ('conv1_1', 0.2),\n",
-    "    ('conv2_1', 0.2),\n",
-    "    ('conv3_1', 0.2),\n",
-    "    ('conv4_1', 0.2),\n",
-    "    ('conv5_1', 0.2),\n",
-    "]\n",
-    "\n",
-    "\n",
-    "start(run())\n",
-    "\n",
-    "\n",
-    "ALPHA = 1\n",
-    "BETA = 10000\n",
-    "\n",
-    "\n",
-    "start(run())\n",
-    "\n",
-    "\n",
-    "ALPHA = 1\n",
-    "BETA = 100\n",
-    "\n",
-    "\n",
-    "start(run())\n",
-    "\n",
-    "\n",
-    "ALPHA = 1\n",
-    "BETA = 1000\n",
-    "\n",
-    "STYLE_LAYERS = [\n",
-    "    ('conv1_1', 0.25),\n",
-    "    ('conv2_1', 0.25),\n",
-    "    ('conv3_1', 0.25),\n",
-    "    ('conv4_1', 0.25)\n",
-    "]\n",
-    "\n",
-    "\n",
-    "start(run())\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "start(run())"
+   ]
   }
  ],
  "metadata": {
