--- a/Image_Style_Transfer.ipynb
+++ b/Image_Style_Transfer.ipynb
@@ -58,7 +58,7 @@
     "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(http://www.vlfeat.org/matconvnet/models/imagenet-vgg-verydeep-19.mat)<br>\n",
     "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Normalized model<br>\n",
     "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(http://bethgelab.org/deepneuralart/)<br>\n",
-    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MEAN_VALUES is value of each RGB"
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MEAN_VALUES is average of each RGB"
    ]
   },
   {
