--- a/python/Lecture07.ipynb
+++ b/python/Lecture07.ipynb
@@ -13,25 +13,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 2 3 4 5 6 7 8 9 10 10\n",
-      "2 3 4 5 6 7 8 9 10 10\n",
-      "3 4 5 6 7 8 9 10 10\n",
-      "4 5 6 7 8 9 10 10\n",
-      "5 6 7 8 9 10 10\n",
-      "6 7 8 9 10 10\n",
-      "7 8 9 10 10\n",
-      "8 9 10 10\n",
-      "9 10 10\n",
-      "10 10\n"
+      "12345678910\n",
+      "2345678910\n",
+      "345678910\n",
+      "45678910\n",
+      "5678910\n",
+      "678910\n",
+      "78910\n",
+      "8910\n",
+      "910\n",
+      "10\n"
      ]
     }
    ],
@@ -39,10 +37,10 @@
     "for i in range(10):\n",
     "    while True:\n",
     "        i = i + 1\n",
-    "        print i,\n",
+    "        print(i, end=\"\")\n",
     "        if i >= 10:\n",
     "            break\n",
-    "    print i"
+    "    print()"
    ]
   },
   {
@@ -76,10 +74,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -93,13 +89,13 @@
     "num = 5\n",
     "\n",
     "if num == 1:\n",
-    "    print \"num은 1입니다.\"\n",
+    "    print(\"num은 1입니다.\")\n",
     "elif num == 2:\n",
-    "    print \"num은 2입니다.\"\n",
+    "    print(\"num은 2입니다.\")\n",
     "elif num == 3 or num == 4:\n",
-    "    print \"num은 3또는 4입니다.\"\n",
+    "    print(\"num은 3또는 4입니다.\")\n",
     "else:\n",
-    "    print \"num은 5입니다.\""
+    "    print(\"num은 5입니다.\")"
    ]
   },
   {
@@ -129,43 +125,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 9 8 7 6 5 4 3 2 1 \n",
-      "Hello list for \n",
-      "0 1 2 3 4 5 6 7 8 9\n"
+      "10987654321\n",
+      "Hellolistfor\n",
+      "0123456789"
      ]
     }
    ],
    "source": [
     "num = 10\n",
     "while num > 0:\n",
-    "    print num, \n",
+    "    print(num, end=\"\") \n",
     "    num = num - 1\n",
     "    \n",
-    "print \"\"\n",
+    "print()\n",
     "\n",
     "for t in [\"Hello\", \"list\", \"for\"]:\n",
-    "    print t,\n",
+    "    print(t,end=\"\")\n",
     "    \n",
-    "print \"\"\n",
+    "print()\n",
     "\n",
     "for i in range(10):\n",
-    "    print i,"
+    "    print(i,end=\"\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 반복문 활용하기\n",
+    "### 반복문과 조건문 활용하기\n",
     "\n",
     "a = [1, 2, 3, 4]<br>\n",
     "<b>[x**2 for x in a]</b> 와 같이 for의 결과를 바로 리스트로 만들 수 있다."
@@ -173,10 +167,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -188,29 +180,54 @@
    ],
    "source": [
     "a = [1, 2, 3 ,4]\n",
-    "print [x**2 for x in a]"
+    "print([x**2 for x in a])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3이 있음\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [2, 3]\n",
+    "\n",
+    "if 3 in a:\n",
+    "    print(\"3이 있음\")\n",
+    "else :\n",
+    "    if 2 in a:\n",
+    "        print(\"2가 있음\")\n",
+    "\n",
+    "    print(\"없음\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
