--- a/python/Lecture01.ipynb
+++ b/python/Lecture01.ipynb
@@ -17,10 +17,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "a = 1"
@@ -35,23 +33,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
-      "<type 'int'>\n"
+      "1\n",
+      "<class 'int'>\n"
      ]
     }
    ],
    "source": [
-    "print a\n",
-    "print type(a)"
+    "print(a)\n",
+    "print(type(a))"
    ]
   },
   {
@@ -74,10 +70,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "i = -5\n",
@@ -88,10 +82,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -105,10 +97,10 @@
     }
    ],
    "source": [
-    "print i\n",
-    "print f\n",
-    "print o\n",
-    "print h"
+    "print(i)\n",
+    "print(f)\n",
+    "print(o)\n",
+    "print(h)"
    ]
   },
   {
@@ -121,9 +113,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -134,7 +125,7 @@
       "7\n",
       "-1\n",
       "12\n",
-      "0\n"
+      "0.75\n"
      ]
     }
    ],
@@ -142,39 +133,10 @@
     "a = 3\n",
     "b = 4\n",
     "\n",
-    "print (a+b)\n",
-    "print (a-b)\n",
-    "print (a*b)\n",
-    "print (a/b)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "a / b는 왜 0이 나왔을까?\n",
-    "왜냐하면 파이썬 2.7 버전에서는 정수형 데이터끼리 나눌 때에는 자동으로 나머지를 버리기 때문이다. 만약 소숫점으로 나누고 싶다면 두 정수형 데이터 중 하나 이상을 실수형으로 바꿔주면 된다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.75\n",
-      "0.75\n"
-     ]
-    }
-   ],
-   "source": [
-    "print (a / float(b))\n",
-    "print (a / (b * 1.0))"
+    "print(a+b)\n",
+    "print(a-b)\n",
+    "print(a*b)\n",
+    "print(a/b)"
    ]
   },
   {
@@ -183,53 +145,61 @@
    "source": [
     "###  - 그 외의 연산자\n",
     "** : x의 y제곱을 구하는 연산자<br>\n",
-    "%  : x를 y로 나눈 나머지를 구하는 연산자"
+    "%  : x를 y로 나눈 나머지를 구하는 연산자<br>\n",
+    "// : x를 y로 나눈 몫을 구하는 연산자"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10000\n",
-      "2\n"
+      "1000\n",
+      "1\n",
+      "3\n"
      ]
     }
    ],
    "source": [
     "a = 10\n",
-    "b = 4\n",
+    "b = 3\n",
     "\n",
-    "print a**b\n",
-    "print a%b"
+    "print(a**b)\n",
+    "print(a%b)\n",
+    "print(a//b)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
