--- a/python/Lecture02.ipynb
+++ b/python/Lecture02.ipynb
@@ -13,9 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -23,8 +21,8 @@
      "text": [
       "Hello world\n",
       "Hello world\n",
-      "<type 'str'>\n",
-      "<type 'str'>\n"
+      "<class 'str'>\n",
+      "<class 'str'>\n"
      ]
     }
    ],
@@ -32,11 +30,11 @@
     "a = \"Hello world\"\n",
     "b = 'Hello world'\n",
     "\n",
-    "print a\n",
-    "print b\n",
+    "print(a)\n",
+    "print(b)\n",
     "\n",
-    "print type(a)\n",
-    "print type(b)"
+    "print(type(a))\n",
+    "print(type(b))"
    ]
   },
   {
@@ -49,10 +47,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -60,8 +56,8 @@
      "text": [
       "Hello world, 'New world!' \n",
       "He said, \"Thank you!\" \n",
-      "<type 'str'>\n",
-      "<type 'str'>\n"
+      "<class 'str'>\n",
+      "<class 'str'>\n"
      ]
     }
    ],
@@ -69,11 +65,11 @@
     "a = \"Hello world, 'New world!' \"\n",
     "b = 'He said, \"Thank you!\" '\n",
     "\n",
-    "print a\n",
-    "print b\n",
+    "print(a)\n",
+    "print(b)\n",
     "\n",
-    "print type(a)\n",
-    "print type(b)"
+    "print(type(a))\n",
+    "print(type(b))"
    ]
   },
   {
@@ -85,10 +81,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -103,8 +97,8 @@
     "a = 'Hello world, \\'New world!\\' '\n",
     "b = \"He said, \\\"Thank you!\\\" \"\n",
     "\n",
-    "print a\n",
-    "print b"
+    "print(a)\n",
+    "print(b)"
    ]
   },
   {
@@ -122,10 +116,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -139,7 +131,7 @@
    ],
    "source": [
     "sentence = \"\\'Hello, world\\' \\nHe think. \\n \\t \\\" Hi!! \\\"\"\n",
-    "print sentence"
+    "print(sentence)"
    ]
   },
   {
@@ -154,10 +146,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -172,8 +162,8 @@
     "a = \"Hello, \"\n",
     "b = \"world\"\n",
     "\n",
-    "print a+b\n",
-    "print b * 10"
+    "print(a+b)\n",
+    "print(b * 10)"
    ]
   },
   {
@@ -188,10 +178,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -204,8 +192,8 @@
    ],
    "source": [
     "a = \"Hello, world!\"\n",
-    "print a[1]\n",
-    "print a[0:5]"
+    "print(a[1])\n",
+    "print(a[0:5])"
    ]
   },
   {
@@ -218,10 +206,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -234,8 +220,8 @@
    ],
    "source": [
     "a = \"Hello, world!\"\n",
-    "print a[-1]\n",
-    "print a[7:]"
+    "print(a[-1])\n",
+    "print(a[7:])"
    ]
   },
   {
@@ -257,10 +243,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -274,30 +258,30 @@
    "source": [
     "a = 3\n",
     "b = \"Hello\"\n",
-    "print \"a is {} and b is {}\".format(a, b)\n",
-    "print \"a is %d and b is %s\" % (a, b)"
+    "print(\"a is {} and b is {}\".format(a, b))\n",
+    "print(\"a is %d and b is %s\" % (a, b))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
