--- a/python/Lecture03.ipynb
+++ b/python/Lecture03.ipynb
@@ -8,15 +8,14 @@
     "### - 리스트 (list)\n",
     "여러가지 자료의 모음<br>\n",
     "숫자 모음이나 변수, 값들을 []로 감싸면 된다.\n",
-    "<b>리스트 이름 = [ 요소1, 요소2, .. ]</b>로 사용한다."
+    "<b>리스트 이름 = [ 요소1, 요소2, .. ]</b>로 사용한다.<br>\n",
+    "초기화 시에는 <b>a = list()</b> 로도 사용 가능하다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -26,10 +25,10 @@
       "[1, 2, 3]\n",
       "['Hi', 'Hello']\n",
       "[1, 'Hi']\n",
-      "<type 'list'>\n",
-      "<type 'list'>\n",
-      "<type 'list'>\n",
-      "<type 'list'>\n"
+      "<class 'list'>\n",
+      "<class 'list'>\n",
+      "<class 'list'>\n",
+      "<class 'list'>\n"
      ]
     }
    ],
@@ -39,15 +38,15 @@
     "c = [\"Hi\", \"Hello\"]\n",
     "d = [1, \"Hi\"]\n",
     "\n",
-    "print a\n",
-    "print b\n",
-    "print c\n",
-    "print d\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)\n",
+    "print(d)\n",
     "\n",
-    "print type(a)\n",
-    "print type(b)\n",
-    "print type(c)\n",
-    "print type(d)"
+    "print(type(a))\n",
+    "print(type(b))\n",
+    "print(type(c))\n",
+    "print(type(d))"
    ]
   },
   {
@@ -60,10 +59,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -80,10 +77,10 @@
     "a = [1, 2, 3, 4]\n",
     "b = [5, 6]\n",
     "\n",
-    "print a[0]\n",
-    "print a[2:4]\n",
-    "print a + b\n",
-    "print b * 2"
+    "print(a[0])\n",
+    "print(a[2:4])\n",
+    "print(a + b)\n",
+    "print(b * 2)"
    ]
   },
   {
@@ -105,10 +102,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -131,54 +126,54 @@
    "source": [
     "a = [1, 3, 2, 4]\n",
     "\n",
-    "print a\n",
+    "print(a)\n",
     "\n",
     "a.append(5)\n",
-    "print a\n",
+    "print(a)\n",
     "\n",
     "a.sort()\n",
-    "print a\n",
+    "print(a)\n",
     "\n",
     "del(a[0])\n",
-    "print a\n",
+    "print(a)\n",
     "\n",
     "a.reverse()\n",
-    "print a\n",
+    "print(a)\n",
     "\n",
-    "print a.index(5)\n",
+    "print(a.index(5))\n",
     "\n",
     "a.insert(4, 5)\n",
-    "print a\n",
+    "print(a)\n",
     "\n",
     "a.remove(2)\n",
-    "print a\n",
+    "print(a)\n",
     "\n",
-    "print a.count(5)\n",
+    "print(a.count(5))\n",
     "\n",
-    "print a.pop()\n",
-    "print a"
+    "print(a.pop())\n",
+    "print(a)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
