--- a/python/Lecture04.ipynb
+++ b/python/Lecture04.ipynb
@@ -17,9 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -29,10 +27,10 @@
       "(1, 2, 3)\n",
       "('Hello', 'Tuple')\n",
       "(1, 'Hello')\n",
-      "<type 'tuple'>\n",
-      "<type 'tuple'>\n",
-      "<type 'tuple'>\n",
-      "<type 'tuple'>\n"
+      "<class 'tuple'>\n",
+      "<class 'tuple'>\n",
+      "<class 'tuple'>\n",
+      "<class 'tuple'>\n"
      ]
     }
    ],
@@ -42,15 +40,15 @@
     "t3 = (\"Hello\", \"Tuple\")\n",
     "t4 = (1, \"Hello\")\n",
     "\n",
-    "print t1\n",
-    "print t2\n",
-    "print t3\n",
-    "print t4\n",
+    "print(t1)\n",
+    "print(t2)\n",
+    "print(t3)\n",
+    "print(t4)\n",
     "\n",
-    "print type(t1)\n",
-    "print type(t2)\n",
-    "print type(t3)\n",
-    "print type(t4)"
+    "print(type(t1))\n",
+    "print(type(t2))\n",
+    "print(type(t3))\n",
+    "print(type(t4))"
    ]
   },
   {
@@ -64,9 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -83,32 +79,32 @@
     "a = (1, 2, 3, 4)\n",
     "b = (5, 6)\n",
     "\n",
-    "print a[0]\n",
-    "print a[2:4]\n",
-    "print a + b\n",
-    "print b * 2"
+    "print(a[0])\n",
+    "print(a[2:4])\n",
+    "print(a + b)\n",
+    "print(b * 2)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
