--- a/python/Lecture05.ipynb
+++ b/python/Lecture05.ipynb
@@ -15,17 +15,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set([1, 2, 3, 5])\n",
-      "<type 'set'>\n"
+      "{1, 2, 3, 5}\n",
+      "<class 'set'>\n"
      ]
     }
    ],
@@ -33,8 +31,8 @@
     "a = [1, 5, 3, 2, 1]\n",
     "b = set(a)\n",
     "\n",
-    "print b\n",
-    "print type(b)\n"
+    "print(b)\n",
+    "print(type(b))"
    ]
   },
   {
@@ -52,21 +50,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set([2])\n",
-      "set([2])\n",
-      "set([1, 2, 3, 4, 5])\n",
-      "set([1, 2, 3, 4, 5])\n",
-      "set([1, 3])\n",
-      "set([1, 3])\n"
+      "{2}\n",
+      "{2}\n",
+      "{1, 2, 3, 4, 5}\n",
+      "{1, 2, 3, 4, 5}\n",
+      "{1, 3}\n",
+      "{1, 3}\n"
      ]
     }
    ],
@@ -74,14 +70,14 @@
     "s1 = set([1, 2, 3])\n",
     "s2 = set([2, 4, 5])\n",
     "\n",
-    "print s1 & s2\n",
-    "print s1.intersection(s2)\n",
+    "print(s1 & s2)\n",
+    "print(s1.intersection(s2))\n",
     "\n",
-    "print s1 | s2\n",
-    "print s1.union(s2)\n",
+    "print(s1 | s2)\n",
+    "print(s1.union(s2))\n",
     "\n",
-    "print s1 - s2\n",
-    "print s1.difference(s2)"
+    "print(s1 - s2)\n",
+    "print(s1.difference(s2))"
    ]
   },
   {
@@ -96,18 +92,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set([1, 2, 3, 4])\n",
-      "set([1, 2, 3, 4, 5, 6])\n",
-      "set([2, 3, 4, 5, 6])\n"
+      "{1, 2, 3, 4}\n",
+      "{1, 2, 3, 4, 5, 6}\n",
+      "{2, 3, 4, 5, 6}\n"
      ]
     }
    ],
@@ -115,35 +109,35 @@
     "s1 = set([1, 2, 3])\n",
     "\n",
     "s1.add(4)\n",
-    "print s1\n",
+    "print(s1)\n",
     "\n",
     "s1.update([5, 6])\n",
-    "print s1\n",
+    "print(s1)\n",
     "\n",
     "s1.remove(1)\n",
-    "print s1"
+    "print(s1)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
