--- a/python/Lecture06.ipynb
+++ b/python/Lecture06.ipynb
@@ -15,21 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "{}\n",
-      "{'world': 2, 'hello': 1}\n",
+      "{'hello': 1, 'world': 2}\n",
       "{1: 'dictionary', 2: 'second'}\n",
-      "<type 'dict'>\n",
-      "<type 'dict'>\n",
-      "<type 'dict'>\n"
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n"
      ]
     }
    ],
@@ -38,25 +36,13 @@
     "d2 = {\"hello\" : 1, \"world\" : 2}\n",
     "d3 = {1 : \"dictionary\", 2 : \"second\"}\n",
     "\n",
-    "print d1\n",
-    "print d2\n",
-    "print d3\n",
+    "print(d1)\n",
+    "print(d2)\n",
+    "print(d3)\n",
     "\n",
-    "print type(d1)\n",
-    "print type(d2)\n",
-    "print type(d3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# 딕셔너리 / 튜플 / print 와 raw_input / for / while / if elif else / Library 설명 및  documentation 찾고 쓰는 법 (anaconda를 설치한 이유)/ Beautifulsoup 사용하기위해\n",
-    "# 페이지 소스보기 로 단서를 얻는법 및 단서로 찾는법 / while True 와 time.sleep 를 이용해 실시간 트래킹 하는법 / 한글 사용 #-~ㅁㄴㅇㄻㄴㄻㄴㄹutf-78afdsdfasf"
+    "print(type(d1))\n",
+    "print(type(d2))\n",
+    "print(type(d3))"
    ]
   },
   {
@@ -83,24 +69,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'key3': 3, 'key2': 2, 'key1': 1}\n",
-      "{'key3': 3, 'key1': 1}\n",
+      "{'key1': 1, 'key2': 2, 'key3': 3}\n",
+      "{'key1': 1, 'key3': 3}\n",
       "False\n",
       "True\n",
-      "['key3', 'key1']\n",
-      "[3, 1]\n",
-      "[('key3', 3), ('key1', 1)]\n",
+      "dict_keys(['key1', 'key3'])\n",
+      "dict_values([1, 3])\n",
+      "dict_items([('key1', 1), ('key3', 3)])\n",
       "1\n",
-      "0\n"
+      "0\n",
+      "[('key1', 1), ('key3', 3)]\n",
+      "dict_items([('key1', 1), ('key3', 3)])\n"
      ]
     }
    ],
@@ -110,45 +96,50 @@
     "d1[\"key1\"] = 1\n",
     "d1[\"key2\"] = 2\n",
     "d1[\"key3\"] = 3\n",
-    "print d1\n",
+    "print(d1)\n",
     "\n",
     "del d1[\"key2\"]\n",
-    "print d1\n",
+    "print(d1)\n",
     "\n",
-    "print \"key2\" in d1\n",
-    "print \"key3\" in d1\n",
+    "print(\"key2\" in d1)\n",
+    "print(\"key3\" in d1)\n",
     "\n",
-    "print d1.keys()\n",
+    "print(d1.keys())\n",
     "\n",
-    "print d1.values()\n",
+    "print(d1.values())\n",
     "\n",
-    "print d1.items()\n",
+    "print(d1.items())\n",
     "\n",
-    "print d1[\"key1\"]\n",
+    "print(d1[\"key1\"])\n",
     "\n",
-    "print d1.get(\"key4\", 0)"
+    "print(d1.get(\"key4\", 0))\n",
+    "\n",
+    "print([(key, d1[key]) for key in d1.keys()])\n",
+    "\n",
+    "print(d1.items())"
    ]
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
