--- a/python/Lecture08.ipynb
+++ b/python/Lecture08.ipynb
@@ -21,9 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -41,7 +39,7 @@
     "y = 4\n",
     "\n",
     "z = sum(x, y)\n",
-    "print z"
+    "print(z)"
    ]
   },
   {
@@ -60,9 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -70,6 +66,7 @@
      "text": [
       "1\n",
       "3\n",
+      "10\n",
       "10\n"
      ]
     }
@@ -81,9 +78,17 @@
     "        sum = sum + i\n",
     "    return sum\n",
     "\n",
-    "print sum(1)\n",
-    "print sum(1, 2)\n",
-    "print sum(1, 2, 3, 4)"
+    "print(sum(1))\n",
+    "print(sum(1, 2))\n",
+    "print(sum(1, 2, 3, 4))\n",
+    "\n",
+    "def sum2( a ):\n",
+    "    sum = 0\n",
+    "    for i in a:\n",
+    "        sum = sum + i\n",
+    "    return sum\n",
+    "\n",
+    "print(sum2([1, 2, 3, 4]))"
    ]
   },
   {
@@ -100,28 +105,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "3\n",
-      "3\n"
+      "4\n",
+      "6\n"
      ]
     }
    ],
    "source": [
-    "def sum( a, b = 0):\n",
-    "    return a + b\n",
+    "def sum( a, b, c = 3):\n",
+    "    return a + b + c\n",
     "\n",
-    "print sum(1)\n",
-    "print sum(1, 2)\n",
-    "print sum(1, b=2)"
+    "print(sum(1, 0))\n",
+    "print(sum(1, 2))\n",
+    "#print(sum(1, c=2)) : Error"
    ]
   },
   {
@@ -135,24 +137,25 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
